# near-indexer-example

./: Cargo.toml
src/: main.rs
