[package]
name = "indexer-example"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.60.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
awc = "3.0.0-beta.5"
actix-server = "=2.0.0-beta.6"
actix-web = { version = "=4.0.0-beta.6", features = [ "openssl" ] }
actix-http = "=3.0.0-beta.6"
actix-tls = "=3.0.0-beta.6"
actix-rt = "2"

clap = { version = "3.2.20", features = ["derive"] }
openssl-probe = "0.1.2"
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync"] }
tracing = "0.1.13"
anyhow = "1.0"

near-indexer = { git = "https://github.com/near/nearcore.git", tag = "1.26.1" }
near-o11y = { git = "https://github.com/near/nearcore.git", tag = "1.26.1" }
